--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     placeholder="Type a message…"
                   />
                   <img
-                    src="https://www.flaticon.com/svg/vstatic/svg/6407/6407340.svg?token=exp=1680978573~hmac=3074dded0d0b90bf9e2c489a2aa11576"
+                    src="./images/previous.png"
                     alt="search-button"
                     class="w-8 enter-btn"
                   />
